assets/default.css
html,
body {
  height: 100%;
  margin: 0;
  padding: 0;
}

html > body {
  min-height: 100%;
  height: auto;
}

img {
  border: 0;
}

.osipov {
  position: absolute;
  top: 50%;
  width: 100%;
  height: 190px;
  margin-top: -80px;
  overflow: hidden;
  background: url("../img/io.jpg") top center no-repeat;
}

.osipov h1 {
  margin: 0;
  padding: 190px 0 0;
}

.menu {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 400px;
  margin-left: -200px;
  margin-top: 122px;
  text-align: right;
  font: 13px "Trebuchet MS", Tahoma, sans-serif;
  color: #90c040;
}

.social {
  display: flex;
  justify-content: flex-end;
  gap: 9px;
  margin-bottom: 8px;
}

.social a {
  display: inline-flex;
  width: 17px;
  height: 17px;
  align-items: center;
  justify-content: center;
  opacity: 0.9;
  transition: opacity 0.15s ease, transform 0.15s ease;
}

.social a:hover {
  opacity: 1;
  transform: translateY(-1px);
}

.social img {
  display: block;
  width: 16px;
  height: 16px;
  filter: drop-shadow(4px 5px 3px rgba(0, 0, 0, 0.2));
}

.site-link,
.project-links {
  margin: 0;
  line-height: 1.45;
  text-shadow: 4px 5px 3px rgba(0, 0, 0, 0.16);
}

.site-link a,
.project-links a {
  color: #7fac34;
  text-decoration-color: rgba(127, 172, 52, 0.58);
  text-underline-offset: 0.18em;
}

.site-link a:hover,
.project-links a:hover {
  color: #90c040;
  text-decoration: none;
}

.project-links span {
  color: #a7c96a;
  padding: 0 4px;
}

.lizzy {
  position: absolute;
  top: 50%;
  width: 90px;
  height: 90px;
}

.lizzy_1 {
  left: 51%;
  margin-top: -123px;
  background: url("../img/lizzy_1.gif");
}

.lizzy_2 {
  left: 42%;
  margin-top: -200px;
  background: url("../img/lizzy_2.gif");
}

.lizzy_3 {
  left: 32%;
  margin-top: -200px;
  background: url("../img/lizzy_3.gif");
}

.lizzy_4 {
  left: 24%;
  margin-top: -290px;
  background: url("../img/lizzy_4.gif");
}

.lizzy_funky {
  position: absolute;
  top: 50%;
  left: 50%;
  width: 115px;
  height: 115px;
  margin-top: 130px;
  margin-left: -260px;
  background: url("../img/lizzy_funky.gif");
}

@media (max-width: 520px) {
  .lizzy_3,
  .lizzy_4 {
    display: none;
  }

  .lizzy_2 {
    left: 12%;
  }

  .lizzy_1 {
    left: auto;
    right: 8%;
  }

  .lizzy_funky {
    left: 10%;
    margin-left: 0;
  }

  .social {
    padding-left: 0;
  }

  .site-link,
  .project-links {
    padding-left: 0;
  }
}

